# py2026-starter

./: .gitignore  Makefile  main.py  pyproject.toml
.github/workflows/: ci.yml
src/friend/: main.py
tests/: test_main.py
