[project]
name = "friend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.83.4",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/friend"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.black]
line-length = 120

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "-vvv"
