[project]
name = "friend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.83.4",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/friend"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "T201"]

[tool.black]
line-length = 120

[tool.mypy]
strict = true
warn_unreachable = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool", "possibly-undefined", "unused-awaitable", "unused-ignore"]

[tool.pytest.ini_options]
addopts = "-vvv --cov=src/friend --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=80"
